--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -5,7 +5,7 @@
     <div class="footer flex justify-center items-center flex-col p-12">
         <div class="footer-logo">
             <img src="https://res.cloudinary.com/primalappsje/image/upload/v1677529262/primal/logos/logo-cowords_ubn9ju.png"
-                alt="Mashcode Studios La - Empresa de aplicaciones Indie" title="Mashcode Studios La" class=" w-20 mb-5">
+                alt="Cowords Logo | Contador de palabras online gratis by Mashcode" title="Cowords" class=" w-20 mb-5">
         </div>
         <div class="ctn-by text-center">
             <span class="text-white">Made with love by Mashcode CEO</span>
