--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/primalappsje/image/upload/v1677529262/primal/logos/logo-cowords_ubn9ju.png" />
+		<link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/primalappsje/image/upload/v1677532537/primal/logos/logo-cowords_dmamb3.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
     <meta name="description" content="Contador de palabras online gratuito que te permite contar el número de palabras, caracteres, párrafos y más en tus textos. ¡Obtén estadísticas de lectura y mejora tu escritura!">
@@ -22,14 +22,14 @@ const { title } = Astro.props;
     <meta name="author" content="mashcode studios la">
     <meta name="robots" content="index, follow">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Contador de Palabras - Herramienta de Conteo de Palabras en Línea Gratuita">
+    <meta property="og:title" content="Cowords | Contador de palabras online gratis by Mashcode">
     <meta property="og:description" content="Contador de palabras online gratuito que te permite contar el número de palabras, caracteres, párrafos y más en tus textos. ¡Obtén estadísticas de lectura y mejora tu escritura!">
-    <meta property="og:url" content="https://www.tusitioweb.com/contador-de-palabras">
-    <meta property="og:image" content="https://www.tusitioweb.com/imagenes/contador-de-palabras.png">
+    <meta property="og:url" content="https://www.cowords.vercel.app">
+    <meta property="og:image" content="https://www.cowords.vercel.app/img/logo-cowords.png">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Contador de Palabras - Herramienta de Conteo de Palabras en Línea Gratuita">
+    <meta name="twitter:title" content="Cowords | Contador de palabras online gratis by Mashcode">
     <meta name="twitter:description" content="Contador de palabras online gratuito que te permite contar el número de palabras, caracteres, párrafos y más en tus textos. ¡Obtén estadísticas de lectura y mejora tu escritura!">
-    <meta name="twitter:image" content="https://www.tusitioweb.com/imagenes/contador-de-palabras.png">
+    <meta name="twitter:image" content="https://www.cowords.vercel.app/img/logo-cowords.png">
     <script src="https://kit.fontawesome.com/26b28607c6.js" crossorigin="anonymous" is:inline></script>
 	</head>
 	<body class="bg-opacity-80 backdrop-filter backdrop-blur-lg">
