--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,11 +33,12 @@ const { title } = Astro.props;
     <script src="https://kit.fontawesome.com/26b28607c6.js" crossorigin="anonymous" is:inline></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blockadblock/3.2.1/blockadblock.js" is:inline></script>
 	</head>
-	<body class="bg-opacity-80 backdrop-filter backdrop-blur-lg">
+	<body class="bg-opacity-80 backdrop-filter backdrop-blur-lg" style="visibility: hidden !important;">
+    <div id="babasbmsgx" style="visibility: visible !important;">Please disable your adblock and script blockers to view this page</div>
+
 		<Header client:load />
 		<slot />
     <Footer/>
-    <div id="babasbmsgx" style="visibility: visible !important;">Please disable your adblock and script blockers to view this page</div>
     <script type="text/javascript" charset="utf-8">
     // Place this code snippet near the footer of your page before the close of the /body tag
     // LEGAL NOTICE: The content of this website and all associated program code are protected under the Digital Millennium Copyright Act. Intentionally circumventing this code may constitute a violation of the DMCA.
