--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,18 @@ const { title } = Astro.props;
 		<Header client:load />
 		<slot />
     <Footer/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2716519721672498"
+        crossorigin="anonymous"></script>
+    <!-- cowords -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-2716519721672498"
+        data-ad-slot="3985456781"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script type="text/javascript">
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <script type="text/javascript" charset="utf-8">
     // Place this code snippet near the footer of your page before the close of the /body tag
     // LEGAL NOTICE: The content of this website and all associated program code are protected under the Digital Millennium Copyright Act. Intentionally circumventing this code may constitute a violation of the DMCA.
