--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,13 @@ import Cowords from '../components/cowords';
 		<section class="p-8 w-vw min-h-vh flex justify-center items-center max-xl:p-3">
 			<div class="flex justify-center items-center flex-col p-10 max-xl:p-2 bg-[#1f222b] rounded-3xl bg-opacity-80 backdrop-filter backdrop-blur-sm">
 			<img src="https://res.cloudinary.com/primalappsje/image/upload/v1677533496/primal/cowords/cowords-on-action_riqwgl.png" class=" w-80 my-24 max-xl:w-60 max-xl:my-20" alt="Cowords in action">
+			<!-- cowords -->
+			<ins class="adsbygoogle"
+				style="display:block"
+				data-ad-client="ca-pub-2716519721672498"
+				data-ad-slot="3985456781"
+				data-ad-format="auto"
+				data-full-width-responsive="true"></ins>
 			<img src="https://res.cloudinary.com/primalappsje/image/upload/v1677529262/primal/logos/logo-cowords_ubn9ju.png"
                 alt="Cowords Logo | Contador de palabras online gratis by Mashcode" title="Cowords" class=" w-10 mb-5">
 			<h1 class="text-white text-3xl max-xl:text-lg max-xl:text-center">Cowords | Contador de palabras online gratis <span>by  </span>
@@ -28,6 +35,13 @@ import Cowords from '../components/cowords';
 				Nuestro contador de palabras es ideal para estudiantes, escritores, periodistas, bloggers y cualquier persona que necesite contar las palabras en sus textos. Pruébalo hoy mismo y mejora tu escritura con Cowords, la mejor herramienta de conteo de palabras, caracteres y párrafos en línea.
 			 </p>
 			 </div>
+			 <!-- cowords -->
+			<ins class="adsbygoogle"
+				style="display:block"
+				data-ad-client="ca-pub-2716519721672498"
+				data-ad-slot="3985456781"
+				data-ad-format="auto"
+				data-full-width-responsive="true"></ins>
 			</div>
 		</section>
 		<section class="p-8 w-vw min-h-vh flex justify-center items-center max-xl:p-3">
