--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,7 +31,8 @@ const { title } = Astro.props;
     <meta name="twitter:description" content="Contador de palabras online gratuito que te permite contar el número de palabras, caracteres, párrafos y más en tus textos. ¡Obtén estadísticas de lectura y mejora tu escritura!">
     <meta name="twitter:image" content="https://www.cowords.vercel.app/img/logo-cowords.png">
     <script src="https://kit.fontawesome.com/26b28607c6.js" crossorigin="anonymous" is:inline></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/blockadblock/3.2.1/blockadblock.js" is:inline></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2716519721672498"
+        crossorigin="anonymous" is:inline></script>
 	</head>
 	<body class="bg-opacity-80 backdrop-filter backdrop-blur-lg" style="visibility: hidden !important;">
     <div id="babasbmsgx" style="visibility: visible !important;">Please disable your adblock and script blockers to view this page</div>
@@ -39,19 +40,12 @@ const { title } = Astro.props;
 		<Header client:load />
 		<slot />
     <Footer/>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2716519721672498"
-        crossorigin="anonymous"></script>
-    <!-- cowords -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-2716519721672498"
-        data-ad-slot="3985456781"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    <script type="text/javascript">
+    
+    
+    <script type="text/javascript" is:inline>
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript" charset="utf-8" is:inline>
     // Place this code snippet near the footer of your page before the close of the /body tag
     // LEGAL NOTICE: The content of this website and all associated program code are protected under the Digital Millennium Copyright Act. Intentionally circumventing this code may constitute a violation of the DMCA.
 
