--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,8 @@ const { title } = Astro.props;
     <script src="https://kit.fontawesome.com/26b28607c6.js" crossorigin="anonymous" is:inline></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2716519721672498"
         crossorigin="anonymous" is:inline></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2716519721672498"
+     crossorigin="anonymous"></script>
 	</head>
 	<body class="bg-opacity-80 backdrop-filter backdrop-blur-lg" style="visibility: hidden !important;">
     <div id="babasbmsgx" style="visibility: visible !important;">Please disable your adblock and script blockers to view this page</div>
