--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,17 +1,17 @@
 ---
 
 ---
-<footer class="bg-indigo text-base">
+<footer class="bg-indigo text-base f-tilt">
     <div class="footer flex justify-center items-center flex-col p-12">
         <div class="footer-logo">
             <img src="https://res.cloudinary.com/primalappsje/image/upload/v1677529262/primal/logos/logo-cowords_ubn9ju.png"
                 alt="Cowords Logo | Contador de palabras online gratis by Mashcode" title="Cowords" class=" w-20 mb-5">
         </div>
         <div class="ctn-by text-center">
-            <span class="text-white">Made with love by Mashcode CEO</span>
+            <span class="text-white">Made with love by <a href="https://lenai.us" class="underline">Lenai Studios</a> CEO</span>
         </div>
         <div class="ctn-arr text-center">
-            <span class="text-white">© 2023 Cowords | All Rights Reserved </span>
+            <span class="text-white">© {new Date().getFullYear()} Cowords | All Rights Reserved </span>
         </div>
     </div>
 </footer>
